# slimSAC

./: .gitignore  README.md  requirements.txt  setup.cfg
experiments/base/: parser_argument.py  sac.py  utils.py
experiments/dmc/: sac.py
experiments/mujoco/: sac.py
launch_job/: parse_arguments.sh
launch_job/dmc/: train.sh
launch_job/dmc/nhrfau/: train.sh
launch_job/dmc/normal/: train.sh
launch_job/mujoco/: cluster_sac.sh  local_sac.sh
launch_job/mujoco/nhrfau/: cluster_sac.sh
slimsac/algorithms/: sac.py
slimsac/algorithms/architectures/: sac.py
slimsac/environments/: dmc.py  mujoco.py
slimsac/networks/: sac.py
slimsac/networks/architectures/: sac.py
slimsac/sample_collection/: __init__.py  replay_buffer.py  samplers.py  sum_tree.py  utils.py
