[metadata]
name = slimsac
version = 0.1
description = slimsac. Minimal implementation of SAC for many envorinments.
license = MIT
setup_requires = 
    setuptools
    wheel

[options]
packages = slimsac, experiments
python_requires = >= 3.10
install_requires =
    flax==0.8.4
    gymnasium[box2d,atari,accept-rom-license]==0.29.1
    ipykernel==6.29.5
    jax==0.4.30
    jaxlib==0.4.30
    matplotlib==3.7.5
    multiprocess==0.70.16
    numpy==1.24.4
    optax==0.2.2
    pygame==2.5.2
    pytest==8.2.2
    scipy==1.10.1
    tqdm==4.66.4
    wandb==0.17.5
    moviepy==1.0.3
    opencv-python==4.10.0.84
    
[options.extras_require]
dev = 
    black
    blackcellmagic
    isort
gpu =
    nvidia-cublas-cu12<=12.4 
    nvidia-cuda-cupti-cu12<=12.4 
    nvidia-cuda-nvcc-cu12<=12.4 
    nvidia-cuda-runtime-cu12<=12.4 
    nvidia-cusolver-cu12<=12.4 
    nvidia-cusparse-cu12<=12.4
    nvidia-nvjitlink-cu12<=12.4 
    jax[cuda12]==0.4.30