[metadata]
name = slimsac
version = 0.1
description = slimsac. Minimal implementation sac for many environments.
license = MIT
setup_requires = 
    setuptools
    wheel

[options]
packages = slimsac, experiments
python_requires = >= 3.10
install_requires =
    dm_control==1.0.30
    flax==0.10.2
    gymnasium[mujoco]==1.0.0
    jax==0.4.30
    jaxlib==0.4.30
    numpy==2.2.1
    rlax==0.1.6
    shimmy==2.0.0
    stable_baselines3[extra]==2.5.0
    snappy==3.2
    tensorboard==2.18.0
    tensorflow_probability==0.25.0
    wandb==0.17.5
    
    
[options.extras_require]
dev = 
    black
    blackcellmagic
    isort
gpu =
    nvidia-cublas-cu12<=12.4 
    nvidia-cuda-cupti-cu12<=12.4 
    nvidia-cuda-nvcc-cu12<=12.4 
    nvidia-cuda-runtime-cu12<=12.4 
    nvidia-cusolver-cu12<=12.4 
    nvidia-cusparse-cu12<=12.4
    nvidia-nvjitlink-cu12<=12.4 
    jax[cuda12]==0.4.30